# a19

./: CMakeLists.txt
resources/: resources.qrc
src/: main.cpp
src/analysis/: ReportGenerator.cpp  ReportGenerator.h  SpectralLibraryMatcher.cpp  SpectralLibraryMatcher.h  StellarPopulationFitter.cpp  StellarPopulationFitter.h
src/data_parser/: DataParser.cpp  DataParser.h  SpectrumData.cpp  SpectrumData.h
src/gui/: CalibrationDialog.cpp  CalibrationDialog.h  DataImportDialog.cpp  DataImportDialog.h  ExportDialog.cpp  ExportDialog.h  LineDetectionDialog.cpp  LineDetectionDialog.h  MainWindow.cpp  MainWindow.h  ReportGeneratorDialog.cpp  ReportGeneratorDialog.h  SpectralLibraryMatchDialog.cpp  SpectralLibraryMatchDialog.h  SpectralLineTableModel.cpp  SpectralLineTableModel.h  SpectrumListModel.cpp  SpectrumListModel.h  StellarPopulationDialog.cpp  StellarPopulationDialog.h
src/spectrum_processing/: RedshiftCalculator.cpp  RedshiftCalculator.h  SpectralLineFitter.cpp  SpectralLineFitter.h  SpectrumProcessor.cpp  SpectrumProcessor.h  WavelengthCalibrator.cpp  WavelengthCalibrator.h
src/visualization/: SpectrumChartView.cpp  SpectrumChartView.h  SpectrumPlot.cpp  SpectrumPlot.h
